maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:13: error: ';' expected but ',' found.
  return xb, yb
           ^